--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <button type="button" class="btn hero-btn" lang="uk">Замовити послугу</button>
         </section>
         <section class="section features">
-            <h2 class="title feature-title"></h2>
+            <h2 class="title feature-title">_</h2>
             <ul class="list features-list">
                 <li class="item features-item">
                     <h2 class="title features-title" lang="uk">Увага до деталей</h2>
@@ -71,15 +71,15 @@
             <h2 class="title about-title" lang="uk">Чим ми займаємося</h2>
             <ul class="list about-list">
                 <li class="item about item">
-                    <img src="./images/project/box1.jpg" alt="написання коду на клавіатурі" width="370px"
+                    <img src="./images/project/box1.jpg" alt="написання коду на клавіатурі" width="370"
                         class="img about-img">
                 </li>
                 <li class="item about item">
-                    <img src="./images/project/box2.jpg" alt="моделювання сайту на телефоні" width="370px"
+                    <img src="./images/project/box2.jpg" alt="моделювання сайту на телефоні" width="370"
                         class="img about-img">
                 </li>
                 <li class="item about item">
-                    <img src="./images/project/box3.jpg" alt="кольорова палітра на планшеті" width="370px"
+                    <img src="./images/project/box3.jpg" alt="кольорова палітра на планшеті" width="370"
                         class="img about-img">
                 </li>
             </ul>
@@ -88,24 +88,23 @@
             <h2 class="title team-title" lang="uk">Наша команда</h2>
             <ul class="list team-list">
                 <li class="item team-item">
-                    <img src="./images/team/igor.jpg" alt="чоловік в окулярах та коричневій рубашці" width="270px"
+                    <img src="./images/team/igor.jpg" alt="чоловік в окулярах та коричневій рубашці" width="270"
                         class="img team-img">
                     <h3 class="title team-uppertitle" lang="uk">Ігор Дем'яненко</h3>
                     <p class="text team-text" lang="en">Product Designer</p>
                 </li>
                 <li class="item team-item">
-                    <img src="./images/team/olha.jpg" alt="блондика в окулярах" width="270px" class="img team-img">
+                    <img src="./images/team/olha.jpg" alt="блондика в окулярах" width="270" class="img team-img">
                     <h3 class="title team-uppertitle" lang="uk">Ольга Рєпіна</h3>
                     <p class="text team-text" lang="en">Frontend Developer</p>
                 </li>
                 <li class="item team-item">
-                    <img src="./images/team/nikola.jpg" alt="чоловік в білій рубашці" width="270px"
-                        class="img team-img">
+                    <img src="./images/team/nikola.jpg" alt="чоловік в білій рубашці" width="270" class="img team-img">
                     <h3 class="title team-uppertitle" lang="uk">Микола Тарасов</h3>
                     <p class="text team-text" lang="en">Marketing</p>
                 </li>
                 <li class="item team-item">
-                    <img src="./images/team/mihail.jpg" alt="чоловік в окулярах та чорній футболці" width="270px"
+                    <img src="./images/team/mihail.jpg" alt="чоловік в окулярах та чорній футболці" width="270"
                         class="img team-img">
                     <h3 class="title team-uppertitle" lang="uk">Михайло Єрмаков</h3>
                     <p class="text team-text" lang="en">UI Designer</p>
