--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
 </head>
 
 <body>
+
+    <!-- Header -->
     <header class="header">
+
+        <!-- Logo -->
         <a href="#" class="logo" lang="en"><span class="logo-color">Web</span>Studio</a>
+
+        <!-- Navigation -->
         <nav class="nav">
             <ul class="list nav-list">
                 <li class="item nav-item">
@@ -24,6 +30,8 @@
                 </li>
             </ul>
         </nav>
+
+        <!-- Contact -->
         <ul class="list contact">
             <li class="item contact-item">
                 <a href="mailto:info@devstudio.com" class="link contact-link" lang="en">info@devstudio.com</a>
@@ -34,11 +42,16 @@
         </ul>
     </header>
 
+    <!-- Main -->
     <main>
+
+        <!-- Hero -->
         <section class="section hero">
             <h1 class="title hero-title" lang="uk">Ефективні рішення для вашого бізнесу</h1>
             <button type="button" class="btn hero-btn" lang="uk">Замовити послугу</button>
         </section>
+
+        <!-- Features -->
         <section class="section features">
             <h2 class="title feature-title">_</h2>
             <ul class="list features-list">
@@ -67,6 +80,8 @@
                 </li>
             </ul>
         </section>
+
+        <!-- About -->
         <section class="section about">
             <h2 class="title about-title" lang="uk">Чим ми займаємося</h2>
             <ul class="list about-list">
@@ -84,6 +99,8 @@
                 </li>
             </ul>
         </section>
+
+        <!-- Team -->
         <section class="section team">
             <h2 class="title team-title" lang="uk">Наша команда</h2>
             <ul class="list team-list">
@@ -113,8 +130,13 @@
         </section>
     </main>
 
+    <!-- Footer -->
     <footer class="footer">
+
+        <!-- Logo -->
         <a href="#" class="logo" lang="en"><span class="logo-color">Web</span>Studio</a>
+
+        <!-- Address -->
         <address class="address">
             <ul class="list contact">
                 <li class="item cotact-item address-contact">
